<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrawlTracker</string>
    <string name="action_settings">About</string>
    <string name="takePhoto">Take Photo</string>
    <string name="title_activity_main_info">TrawlTracking</string>
    <string name="InfoBlurb">This App lets you send a siting of potentially illegal trawling activing to Ghana Government agency, Fisheries Enforcement Unit (FEU). \n \n Make a new report:  take a picture of the vessel, writing in vessel desciption and location.</string>
    <string name="txtAbout">Contact the FEU to report illegal trawling: \nclick the button below, \nOR \nuse SMS #12345, \nwebsite: http://www.ghana.gov.gh/feu, \ncall toll free 12 34 56 78.</string>
    <string name="vesselActivity">activity (fishing, anchor, etc.)</string>
    <string name="vesselDsecriptionLabel">Vessel Description</string>
    <string name="vesselIDLabel">vessel ID (#)</string>
    <string name="headingHint">heading (ie. north)</string>
    <string name="descriptionHint">description (size, markings, etc)</string>
    <string name="locationHint">location</string>
    <string name="dateTimeMessage">yyyyMMdd  HHmmss</string>
    <string name="sendButtonHint">Send Report Now</string>
    <string name="dateTimeLabel">Date / Time</string>
    <string name="buttonMakeReportLabel">Make New Report</string>

</resources>
