<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trawtracker.Start_PhotoLocation"
    tools:ignore="MergeRootFrame" xmlns:android="http://schemas.android.com/apk/res/android">
    
<!-- FIXME - change all string text from hard coded to string resorces -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:windowSoftInputMode="stateHidden" >

	       <LinearLayout
	           android:id="@+id/headerLayout"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:layout_marginStart="0dp"
	           android:background="#50b4c7fd"
	           android:orientation="horizontal" >

	          <ImageView
                  android:id="@+id/imGPSStatus"
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="5dp"
                  android:gravity="left"
                  android:src="@drawable/ic_gps_icon_red" />
	           
	           <ImageView
	               android:id="@+id/cameraIcon"
	               android:layout_width="40dp"
	               android:layout_height="25dp"
	               android:layout_marginLeft="20dp"
	               android:layout_marginTop="5dp"
	               android:src="@drawable/camera" />

	           <TextView
	               android:id="@+id/photo_text"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_marginLeft="15dp"
	               android:layout_marginTop="10dp"
	               android:focusable="false"
	               android:focusableInTouchMode="false"
	               android:text="no photo added" />
	       </LinearLayout>
            
            <LinearLayout
                android:id="@+id/vesselLinLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:windowSoftInputMode="stateHidden" >

                <TextView
                    android:id="@+id/vesselType"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/vesselDsecriptionLabel" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dip"
                    android:layout_marginTop="2dp"
                    android:background="#FF909090" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vesselInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/Tittle"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/txtVesselActivity"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/vesselActivity"
                    android:maxLines="2" />

                <EditText
                    android:id="@+id/txtVesselId"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/vesselIDLabel"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/txtDirection"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/headingHint"
                    android:maxLines="2" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/txtComments"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/descriptionHint"
                    android:maxLines="4" />

                <ListView
                    android:id="@+id/lv1"
                    android:layout_width="290dp"
                    android:layout_height="166dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:choiceMode="singleChoice"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/txtLocation"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/locationHint"
                    android:maxLines="1" />
            </LinearLayout>

           <LinearLayout
               android:id="@+id/dateTimeDetail"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="2dp"
               android:orientation="vertical" >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/titleDateTime"
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:layout_marginLeft="10dp"
                       android:layout_marginTop="15dp"
                       android:gravity="left"
                       android:text="@string/dateTimeLabel" />

                   <EditText
                       android:id="@+id/txtDateTime"
                       android:layout_width="290dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_marginTop="10dp"
                       android:layout_weight="1"
                       android:ems="10"
                       android:hint="@string/dateTimeMessage"
                       android:maxLength="20"
                       android:maxLines="1" />

               </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dip"
                    android:layout_marginTop="2dp"
                    android:background="#FF909090" />
            </LinearLayout>
            
	       <LinearLayout
	           android:id="@+id/footerLayout"
	           android:layout_width="fill_parent"
	           android:layout_height="70dp"
	           android:layout_marginStart="0dp"
	           android:background="#b4c7fd"
	           android:orientation="horizontal" >

	           <ImageView
	               android:id="@+id/reportIcon"
	               android:layout_width="wrap_content"
	               android:layout_height="match_parent"
	               android:layout_marginLeft="20dp"
	               android:layout_marginTop="5dp"
	               android:src="@drawable/ic_launcher" />

	           <Button
	               android:id="@+id/btnSendReport"
	               android:layout_width="match_parent"
	               android:layout_height="match_parent"
	               android:layout_margin="6dp"
	               android:background="#220088"
	               android:onClick="sendReport"
	               android:text="@string/sendButtonHint"
	               android:textColor="#ffffff" />

	           <TextView
	               android:id="@+id/txtSendReport"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_marginLeft="30dp"
	               android:layout_marginTop="5dp"
	               android:layout_weight="0.2"
	               android:focusable="false"
	               android:focusableInTouchMode="false"
	               android:text="not sent yet" />

	       </LinearLayout>
            
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
